# kint-test

./: .gitignore  README  Readme.md
src/: Annotation.cc  CallGraph.cc  CallGraphCFG.cc  Diagnostic.cc  Diagnostic.h  IntGlobal.cc  IntGlobal.h  IntRewrite.cc  IntSat.cc  Makefile.am  PathAnalysis.cc  PathAnalysis.h  PathAnno.cc  PathAnno.h  PathGen.cc  PathGen.h  PathGet.cc  PathGet.h  SMTBoolector.cc  Taint.cc  ValueGen.cc  cscope.files  gen_intglobal.sh  xCFG.cc  xCallGraph.cc  xCallPaths.cc  xFunctionsAnalysis.cc  xfuncs  xintck
test/: entrys.xml  kint-cc1  kint-gcc
test/linux/: .gdbinit  agp-1745.ll.out  bitcode.lst  pintck.txt  xfs-2011-4077.ll.out
test/xqx-test/: add.c  tmp.txt
